--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Bttn.css demo</title>
     <meta name='author' content='Ganapati V S, @ganapativs'>
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="flexboxgrid.css"/>
-    <link rel="stylesheet" href="demo.css"/>
-    <link rel="stylesheet" href="../bttn.css"/>
+    <link rel="stylesheet" href="./flexboxgrid.css"/>
+    <link rel="stylesheet" href="./demo.css"/>
+    <link rel="stylesheet" href="./bttn.min.css"/>
 </head>
 <body>
 <div class="row center-xs bttn-logo-box">
@@ -189,6 +189,6 @@
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.12/clipboard.min.js" defer></script>
-<script src="demo.js" defer></script>
+<script src="./demo.js" defer></script>
 </body>
 </html>
