--- a/index.html
+++ b/index.html
@@ -19,15 +19,13 @@
                 bttn.css
             </button>
             <h4 class="col-xs-12">Awesome CSS buttons for your next web project</h4>
-            <div class="row col-xs-12 col-sm-8 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3 col-sm-offset-2 around-xs download-options">
-                <div class="col-xs-6 download-bttn end-xs">
+            <div class="row col-xs-12 col-sm-8 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3 col-sm-offset-2 col-xs-offset-0 around-xs download-options">
+                <div class="col-xs-12 download-bttn center-xs">
                     <a href="https://github.com/ganapativs/bttn.css/archive/master.zip" download="bttn.css.zip">
                         <button class="bttn-simple bttn-lg">
                             Download
                         </button>
                     </a>
-                </div>
-                <div class="col-xs-6 download-bttn start-xs">
                     <a href="https://github.com/ganapativs/bttn.css" target="_blank">
                         <button class="bttn-simple bttn-lg">
                             Github
