Remove line height - material flat

--- a/index.html
+++ b/index.html
@@ -247,28 +247,28 @@
                 <div class="code-copy">Copy code</div>
                 <div class="bttn-size">.bttn-material-flat.bttn-xs</div>
                 <button class="bttn-material-flat bttn-xs">
-                   <i class="icon-layers"></i> Extra Small
+                   Extra Small
                 </button>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
                 <div class="code-copy">Copy code</div>
                 <div class="bttn-size">.bttn-material-flat.bttn-sm</div>
                 <button class="bttn-material-flat bttn-sm">
-                    <i class="icon-layers"></i> Small
+                    Small
                 </button>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
                 <div class="code-copy">Copy code</div>
                 <div class="bttn-size">.bttn-material-flat.bttn-md</div>
                 <button class="bttn-material-flat bttn-md">
-                    <i class="icon-layers"></i> Medium
+                    Medium
                 </button>
             </div>
             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
                 <div class="code-copy">Copy code</div>
                 <div class="bttn-size">.bttn-material-flat.bttn-lg</div>
                 <button class="bttn-material-flat bttn-lg">
-                    <i class="icon-layers"></i> Large
+                    Large
                 </button>
             </div>
         </div>
