--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
 <div class="row center-xs bttn-logo-box" id="logo-box">
     <div class="col-xs-12">
         <div class="box">
-            <button class="bttn-jelly bttn-warning">
+            <button class="bttn-jelly">
                 bttn.css
             </button>
             <h4 class="col-xs-12">Awesome CSS buttons for your next web project</h4>
             <div class="row col-xs-12 col-sm-8 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3 col-sm-offset-2 col-xs-offset-0 around-xs download-options">
-                <div class="col-xs-12 download-bttn center-xs">
+                <div class="col-xs-6 download-bttn end-xs">
                     <a href="https://github.com/ganapativs/bttn.css/archive/master.zip" download="bttn.css.zip">
-                        <button class="bttn-simple bttn-lg">
+                        <button class="bttn-gradient bttn-md bttn-warning">
                             Download
                         </button>
                     </a>
+                </div>
+                <div class="col-xs-6 download-bttn start-xs">
                     <a href="https://github.com/ganapativs/bttn.css" target="_blank">
-                        <button class="bttn-simple bttn-lg">
+                        <button class="bttn-gradient bttn-md bttn-primary">
                             Github
                         </button>
                     </a>
@@ -49,7 +51,7 @@
                 <div class="col-xs-12 download-bttn center-xs">
                     With ❤
                     <a href="https://twitter.com/ganapativs" target="_blank">
-                        <button class="bttn-minimal bttn-sm">
+                        <button class="bttn-simple bttn-sm">
                             @ganapativs
                         </button>
                     </a>
@@ -65,7 +67,7 @@
             <div class="colors">
                 <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
                 <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
-                <div class="color" style="background: #FFB85F" data-class="bttn-warning"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
                 <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
                 <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
                 <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
@@ -108,7 +110,7 @@
             <div class="colors">
                 <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
                 <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
-                <div class="color" style="background: #FFB85F" data-class="bttn-warning"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
                 <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
                 <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
                 <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
@@ -151,7 +153,7 @@
             <div class="colors">
                 <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
                 <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
-                <div class="color" style="background: #FFB85F" data-class="bttn-warning"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
                 <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
                 <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
                 <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
@@ -194,7 +196,7 @@
             <div class="colors">
                 <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
                 <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
-                <div class="color" style="background: #FFB85F" data-class="bttn-warning"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
                 <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
                 <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
                 <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
@@ -232,12 +234,55 @@
         </div>
     </div>
     <div class="row center-xs middle-xs fancy-box">
+        <h2 class="col-xs-12 fancy-box-title" id="gradient">
+            <a href="#gradient">#</a> <span class="title">Gradient</span>
+            <div class="colors">
+                <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
+                <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
+                <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
+                <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
+                <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
+            </div>
+        </h2>
+        <div class="row col-xs-12 center-xs fancy-box-buttons">
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
+                <div class="code-copy">Copy code</div>
+                <div class="bttn-size">.bttn-gradient.bttn-xs</div>
+                <button class="bttn-gradient bttn-xs">
+                    Extra Small
+                </button>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
+                <div class="code-copy">Copy code</div>
+                <div class="bttn-size">.bttn-gradient.bttn-sm</div>
+                <button class="bttn-gradient bttn-sm">
+                    Small
+                </button>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
+                <div class="code-copy">Copy code</div>
+                <div class="bttn-size">.bttn-gradient.bttn-md</div>
+                <button class="bttn-gradient bttn-md">
+                    Medium
+                </button>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
+                <div class="code-copy">Copy code</div>
+                <div class="bttn-size">.bttn-gradient.bttn-lg</div>
+                <button class="bttn-gradient bttn-lg">
+                    Large
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="row center-xs middle-xs fancy-box">
         <h2 class="col-xs-12 fancy-box-title" id="fill">
             <a href="#fill">#</a> <span class="title">Fill</span>
             <div class="colors">
                 <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
                 <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
-                <div class="color" style="background: #FFB85F" data-class="bttn-warning"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
                 <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
                 <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
                 <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
@@ -280,7 +325,7 @@
             <div class="colors">
                 <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
                 <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
-                <div class="color" style="background: #FFB85F" data-class="bttn-warning"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
                 <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
                 <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
                 <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
@@ -323,7 +368,7 @@
             <div class="colors">
                 <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
                 <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
-                <div class="color" style="background: #FFB85F" data-class="bttn-warning"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
                 <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
                 <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
                 <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
