Bordered button added - version bump to 0.1.1

--- a/index.html
+++ b/index.html
@@ -105,6 +105,49 @@
         </div>
     </div>
     <div class="row center-xs middle-xs fancy-box">
+        <h2 class="col-xs-12 fancy-box-title" id="bordered">
+            <a href="#bordered">#</a> <span class="title">Bordered</span>
+            <div class="colors">
+                <div class="color active" style="background: #ffffff" data-class="bttn-default"></div>
+                <div class="color" style="background: #1d89ff" data-class="bttn-primary"></div>
+                <div class="color" style="background: #feab3a" data-class="bttn-warning"></div>
+                <div class="color" style="background: #FF5964" data-class="bttn-danger"></div>
+                <div class="color" style="background: #28B78D" data-class="bttn-success"></div>
+                <div class="color" style="background: #bd2df5" data-class="bttn-royal"></div>
+            </div>
+        </h2>
+        <div class="row col-xs-12 center-xs fancy-box-buttons">
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
+                <div class="code-copy">Copy code</div>
+                <div class="bttn-size">.bttn-bordered.bttn-xs</div>
+                <button class="bttn-bordered bttn-xs">
+                    Extra Small
+                </button>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
+                <div class="code-copy">Copy code</div>
+                <div class="bttn-size">.bttn-bordered.bttn-sm</div>
+                <button class="bttn-bordered bttn-sm">
+                    Small
+                </button>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
+                <div class="code-copy">Copy code</div>
+                <div class="bttn-size">.bttn-bordered.bttn-md</div>
+                <button class="bttn-bordered bttn-md">
+                    Medium
+                </button>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 item">
+                <div class="code-copy">Copy code</div>
+                <div class="bttn-size">.bttn-bordered.bttn-lg</div>
+                <button class="bttn-bordered bttn-lg">
+                    Large
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="row center-xs middle-xs fancy-box">
         <h2 class="col-xs-12 fancy-box-title" id="minimal">
             <a href="#minimal">#</a> <span class="title">Minimal</span>
             <div class="colors">
